# tokengate

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
assets/: architecture.md
benchmarks/: benchmark.py
docs/: ARCHITECTURE.md  DECISIONS.md  ERROR_LOG.md  LIBRARY_API.md  PROJECT_MEMORY.md  ROADMAP.md  TODO.md  V2_DESIGN.md
src/contextpilot/: __init__.py
src/contextpilot/audit/: __init__.py  audit_report.py  stage_trace.py
src/contextpilot/budgeting/: __init__.py  budgeter.py  token_counter.py
src/contextpilot/compression/: __init__.py  extractive.py  structured_schema.py
src/contextpilot/core/: __init__.py  block.py  config.py  optimizer.py  result.py
src/contextpilot/dashboard/: __init__.py  __main__.py  audit_store.py  server.py
src/contextpilot/dashboard/static/: index.html
src/contextpilot/deduplication/: __init__.py  exact.py  near_duplicate.py  semantic.py
src/contextpilot/models/: __init__.py  base.py  bge.py  fakes.py  vectors.py
src/contextpilot/prompts/: __init__.py  prompt_builder.py
src/contextpilot/ranking/: __init__.py  hybrid_ranker.py  keyword_ranker.py  reranker_stage.py  score_normalizer.py  semantic_scorer.py  signals.py
src/contextpilot/selection/: __init__.py  mmr.py
src/contextpilot/utils/: __init__.py  errors.py  hashing.py  logging.py
src/tokengate/: __init__.py
src/tokengate/audit/: __init__.py  audit_report.py  stage_trace.py
src/tokengate/budgeting/: __init__.py  budgeter.py  token_counter.py
src/tokengate/compression/: __init__.py  base.py  extractive.py  llmlingua_compressor.py
src/tokengate/core/: __init__.py  block.py  config.py  optimizer.py  result.py
src/tokengate/dashboard/: __init__.py  __main__.py  audit_store.py  server.py
src/tokengate/dashboard/static/: index.html
src/tokengate/deduplication/: __init__.py  exact.py  near_duplicate.py  semantic.py
src/tokengate/eval/: __init__.py  compare.py  recipe.py  report.py
src/tokengate/models/: __init__.py  bge.py  vectors.py
src/tokengate/prompts/: __init__.py  prompt_builder.py
src/tokengate/ranking/: __init__.py  hybrid_ranker.py  keyword_ranker.py  reranker_stage.py  semantic_scorer.py  signals.py
src/tokengate/selection/: adaptive_cutoff.py  mmr.py
src/tokengate/utils/: __init__.py  errors.py  logging.py
tests/: test_adaptive_cutoff.py  test_block.py  test_budgeter.py  test_compression.py  test_config.py  test_config_file.py  test_dashboard.py  test_deduplication.py  test_env.py  test_import.py  test_integration.py  test_mmr.py  test_models.py  test_optimizer.py  test_prompt_builder.py  test_ranking.py  test_recipes.py  test_reranker.py  test_result.py  test_semantic_dedup.py  test_semantic_scoring.py  test_token_counter.py  test_utils.py  test_vectors.py
