[project]
name = "contextpilot"
version = "0.1.0"
description = "Reusable, app-agnostic context optimization for LLM applications: include, drop, compress, rank, and budget context with a full audit trail."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ContextPilot Authors" }]
keywords = ["llm", "context", "optimization", "rag", "prompt", "tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Core has ZERO required runtime dependencies (ADR-003/004).
dependencies = []

[project.optional-dependencies]
# Accurate, model-aware token counting (opt-in).
tiktoken = ["tiktoken>=0.7"]

[project.urls]
Homepage = "https://github.com/Mario-Vishal/contextpilot"
Repository = "https://github.com/Mario-Vishal/contextpilot"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["contextpilot"]
strict = true
