[project]
name = "tokengate"
version = "0.1.0"
description = "Reusable, app-agnostic context optimization for LLM applications: include, drop, compress, rank, and budget context with a full audit trail."
readme = "README.md"
license = { file = "LICENSE" }
# Pinned to 3.12 for reliable ML wheels (torch/sentence-transformers) — ADR-012.
requires-python = ">=3.12,<3.13"
authors = [{ name = "TokenGate Authors" }]
keywords = ["llm", "context", "optimization", "rag", "prompt", "tokens", "embeddings", "reranker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Neural engine: embeddings + reranker are REQUIRED core (ADR-010). Not optional.
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
# Accurate, model-aware token counting (opt-in).
tiktoken = ["tiktoken>=0.7"]
# BGE-M3 sparse + multi-vector (ColBERT) modes — future enhancement (ADR-013).
flag = ["FlagEmbedding>=1.2"]
# Audit dashboard: AuditStore + serve_dashboard() + CLI (CP-029, ADR-021).
# Core stays pure; this extra adds web deps. Install with: pip install tokengate[dashboard]
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.urls]
Homepage = "https://github.com/Mario-Vishal/tokengate"
Repository = "https://github.com/Mario-Vishal/tokengate"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

# --- GPU torch (ADR-017) ---
# RTX 5070 Ti is Blackwell (sm_120) -> needs a CUDA 12.8+ build. Pull torch from the
# PyTorch CUDA 12.8 index. Runtime falls back to CPU automatically when CUDA is absent.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokengate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["tokengate"]
strict = true

# ML libraries without (complete) type stubs.
[[tool.mypy.overrides]]
module = ["tiktoken", "sentence_transformers", "sentence_transformers.*", "FlagEmbedding", "FlagEmbedding.*"]
ignore_missing_imports = true

# Dashboard extra deps — not installed in the core venv.
[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*", "fastapi", "fastapi.*"]
ignore_missing_imports = true
